[package]
name = "webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
diesel = { version = "2.1.5", features = ["postgres"] }

[dev-dependencies]
diesel_migrations= {version = "2.1.0", features = ["postgres"]}
