[package]
name = "webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
env_logger = "0.11.3"
log = "0.4"
actix = "0.13"
actix-web-actors = "4.3.0"

serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
rand = "0.8.5"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
byteorder = "1.5.0"
